Tabla leerAlumnos mejorada

--- a/Grupo_L-war/src/main/webapp/ImportarHorario.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarHorario.xhtml
@@ -16,11 +16,11 @@
 
 	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
-	<div class= "hola"> <p>Hola, <h:outputText value="#{infoSesion.usuario.nombre}"/>.</p></div>
+	<div class= "inicio"> <p>Hola, <h:outputText value="#"/>.</p></div>
 
 	<h1 class="titulo"> Importar horario </h1>
 
-	<div class="centro">
+	<div class="centrado">
 		<input type="submit" name="leerEncuesta" value="Cancelar"/>
 		<input type="submit" name="leerEncuesta" value="Aceptar"/>
 	</div>
