--- a/Grupo_L-war/src/main/webapp/Principal.xhtml
+++ b/Grupo_L-war/src/main/webapp/Principal.xhtml
@@ -8,11 +8,13 @@
 
 <h:head>
 	<title>FLM SECRETARIA</title>
-	<h:outputStylesheet library="css" name="Layout.css"  />
+	<h:outputStylesheet library="css" name="Layout.css"  />	
+	<h:outputStylesheet library="css" name="Estilos.css" />
 </h:head>
 
 <h:body>
 
+	<div class="inicio"><p>Hola, <h:outputText value="#"/>.</p></div>
 	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
 	
 	<h1 class="titulo"> Principal </h1>
