--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -9,6 +9,7 @@
 <h:head>
 	<title>Expediente</title>
 	<h:outputStylesheet library="css" name="Layout.css"/>
+	<h:outputStylesheet library="css" name="Estilos.css" />
 </h:head>
 
 <h:body>
