--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -9,6 +9,7 @@
 <h:head>
 	<title>FLM SECRETARIA</title>
 	<h:outputStylesheet library="css" name="Layout.css"  />
+	<h:outputStylesheet library="css" name="Estilos.css"  />
 </h:head>
 
 <h:body>
@@ -30,118 +31,51 @@
 			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
-		<div>
-			<h:form id="matricula">
-				<h:dataTable value="#{AlumnoBB.listaAl}" var="a" border="2" >
-						<h:column>
-							<f:facet name="header">DNI</f:facet> 
-							<h:inputText value="#{a.DNI}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header" filterBy="#{a.nombre}" filterMatchCode="contains">Nombre</f:facet>
-							<h:inputText value="#{a.nombre}" />
-						</h:column>
-	
-						<h:column>
-							<f:facet name="header">Apellido 1</f:facet>
-							<h:inputText value="#{a.apellido1}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Apellido 2</f:facet>
-							<h:inputText value="#{a.apellido2}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Email_Institucional</f:facet>
-							<h:inputText value="#{a.email_Institucional}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Email_Personal</f:facet>
-							<h:inputText value="#{a.email_Personal}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Móvil</f:facet>
-							<h:inputText value="#{a.móvil}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Dirección</f:facet>
-							<h:inputText value="#{a.direccion}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Localidad</f:facet>
-							<h:inputText value="#{a.localidad}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Provincia</f:facet>
-							<h:inputText value="#{a.provincia}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">CP</f:facet>
-							<h:inputText value="#{a.cP}" />
-						</h:column>
-				</h:dataTable>
-			</h:form>
-		</div>
 	</ui:fragment>
 	
 	
 	
-	<ui:fragment rendered="#{InfoSension.personal != null eq true}">	
-		<div class="centro">
-			<div class="izquierdaCentro">
-				<b>Matricula: </b> <br></br><br></br>
-			</div>
-		</div>
-		<div>
-			<h:form id="matricula">
-				<h:dataTable value="#{AlumnoBB.listaAl}" var="a" border="2" >
-						<h:column>
-							<f:facet name="header">DNI</f:facet> 
-							<h:inputText value="#{a.DNI}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header" filterBy="#{a.nombre}" filterMatchCode="contains">Nombre</f:facet>
-							<h:inputText value="#{a.nombre}" />
-						</h:column>
-	
-						<h:column>
-							<f:facet name="header">Apellido 1</f:facet>
-							<h:inputText value="#{a.apellido1}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Apellido 2</f:facet>
-							<h:inputText value="#{a.apellido2}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Email_Institucional</f:facet>
-							<h:inputText value="#{a.email_Institucional}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Email_Personal</f:facet>
-							<h:inputText value="#{a.email_Personal}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Móvil</f:facet>
-							<h:inputText value="#{a.móvil}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Dirección</f:facet>
-							<h:inputText value="#{a.direccion}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Localidad</f:facet>
-							<h:inputText value="#{a.localidad}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">Provincia</f:facet>
-							<h:inputText value="#{a.provincia}" />
-						</h:column>
-						<h:column>
-							<f:facet name="header">CP</f:facet>
-							<h:inputText value="#{a.cP}" />
-						</h:column>
+	<ui:fragment >	
+			<h:form styleClass="centrado">
+				<h:dataTable styleClass="card" value="#{matriculaBB.matriculas}" var="mat">
+					<h:column>
+						<f:facet name="header">Curso Academico</f:facet> 
+						<h:outputText value="#{mat.curso_Academico}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Estado</f:facet> 
+						<h:outputText value="#{mat.estado}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Numero Archivo</f:facet> 
+						<h:outputText value="#{mat.num_Archivo}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Turno Preferente</f:facet> 
+						<h:outputText value="#{mat.turno_Preferente}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Fecha de Matricula</f:facet> 
+						<h:outputText value="#{mat.fecha_De_Matrícula}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Nuevo Ingreso</f:facet> 
+						<h:outputText value="#{mat.nuevo_Ingreso}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Listado Asignaturas</f:facet> 
+						<h:outputText value="#{mat.a}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Estado</f:facet> 
+						<h:outputText value="#{mat.estado}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Expediente</f:facet> 
+						<h:outputText value="#{mat.EM.num_Expediente}" />
+					</h:column>
 				</h:dataTable>
 			</h:form>
-		</div>
 		<div class="importarMatricula"> <h:button value="Importar Matricula" outcome="ImportarMatricula.xhtml" /> </div>
 	</ui:fragment>
 
