solicitar cambio de grupo

--- a/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
@@ -31,14 +31,29 @@
 	</div>
 
 	<div class="centro">
+		<label for="curso">Curso:</label>
+		<select name="curso">
+			 <option value="1">1º</option>
+			 <option value="2">2º</option>
+		</select><br></br>
+
+		<label for="grupo">Grupo:</label>
+		<select name="grupo">
+			 <option value="a">A</option>
+			 <option value="b">B</option>
+		</select><br></br>
 		
-		<select name="so">
-			 <option value="1041">Ingeniería Informática</option>
-			 <option value="1042">Ingeniería del Software</option>
-			 <option value="1043">Ingeniería de la Salud</option>
-			 <option value="1056">Ingeniería de Computadores</option>
-			 <option value="1073">Ingeniería Informatica y Matemáticas</option>
-		</select>
+		<label for="asig">Motivo:</label>
+		<textarea name="comentarios" rows="10" cols="40"></textarea><br></br>
+	
+		<label for="asig">Asignatura:</label>
+		<select name="asig">
+			 <option value="1041">Calculo</option>
+			 <option value="1042">SII</option>
+		</select><br></br><br></br>
+		
+		<input type="submit" name="leerEncuesta" value="Cancelar"/>
+		<input type="submit" name="leerEncuesta" value="Aceptar"/>
 		
 	</div>
 	
