--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:head>
-	<title>FLM SECRETARIA</title>
+	<title>LEER MATRICULA</title>
 	<h:outputStylesheet library="css" name="Layout.css"  />
 	<h:outputStylesheet library="css" name="Estilos.css"  />
 </h:head>
@@ -31,6 +31,48 @@
 			<a href="#" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
+		
+		<h:form styleClass="centro">
+				<h:dataTable styleClass="card" value="#{matriculaBB.matriculas}" var="mat">
+					<h:column>
+						<f:facet name="header">Curso Academico</f:facet> 
+						<h:outputText value="#{mat.curso_Academico}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Estado</f:facet> 
+						<h:outputText value="#{mat.estado}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Numero Archivo</f:facet> 
+						<h:outputText value="#{mat.num_Archivo}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Turno Preferente</f:facet> 
+						<h:outputText value="#{mat.turno_Preferente}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Fecha de Matricula</f:facet> 
+						<h:outputText value="#{mat.fecha_De_Matrícula}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Nuevo Ingreso</f:facet> 
+						<h:outputText value="#{mat.nuevo_Ingreso}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Listado Asignaturas</f:facet> 
+						<h:outputText value="#{mat.a}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Estado</f:facet> 
+						<h:outputText value="#{mat.estado}" />
+					</h:column>
+					<h:column>
+						<f:facet name="header">Expediente</f:facet> 
+						<h:outputText value="#{mat.EM.num_Expediente}" />
+					</h:column>
+				</h:dataTable>
+			</h:form>
+		
 	</ui:fragment>
 	
 	
