--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -18,13 +18,8 @@
 	<div class="inicio">
 		<h:button value="INICIO" outcome="Principal.xhtml" />
 	</div>
-	<div>
-		<p>
-			Hola,
-			<h:outputText value="#" />
-			.
-		</p>
-	</div>
+	<div> <p> Hola, <h:outputText value="#" /> . </p> </div>
+	
 	<div class="cerrar">
 		<h:button value="Cerrar sesion" outcome="index.xhtml" />
 	</div>
