--- a/Grupo_L-war/src/main/webapp/GenerarNuevaContrasena.xhtml
+++ b/Grupo_L-war/src/main/webapp/GenerarNuevaContrasena.xhtml
@@ -34,8 +34,7 @@
 				<h:message for="pass" />
 				
 				<h:outputText value="Repetir nueva contraseña:" />
-				<h:inputSecret id="pass" required="true"
-					value="#{login.usuario.contrasenia}" />
+				<h:inputSecret id="pass" required="true"/>
 				<h:message for="pass" />
 				
 				<h:button value="Guardar Cambios" outcome="Login.xhtml" /> 
