--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -98,7 +98,7 @@
 
 			<p:column headerText="Móvil" filterBy="#{a.Móvil}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{a.Móvil}" />
+				<p:outputLabel value="#{a.Movil}" />
 			</p:column>
 
 			<p:column headerText="Direccion" filterBy="#{a.Direccion}"
