--- a/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
@@ -56,9 +56,9 @@
 				<p:outputLabel value="#{t.Nombre}" />
 			</p:column>
 			
-			<p:column headerText="Créditos" filterBy="#{t.Créditos}"
+			<p:column headerText="Créditos" filterBy="#{t.Creditos}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.Créditos}" />
+				<p:outputLabel value="#{t.Creditos}" />
 			</p:column>
 	 	</p:dataTable>
         </h:form>
