--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -30,7 +30,7 @@
 
 				<h:outputText value="Contraseña:" />
 				<h:inputSecret id="pass" required="true"
-					value="#{loginBB.usuario.contraseña}" />
+					value="#{loginBB.usuario.contrasenia}" />
 				<h:message for="pass" />
 
 				<h:commandButton value="Entrar" action="#{loginBB.entrar()}" /> 
