--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -54,7 +54,7 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">Fecha de Matricula</f:facet>
-					<h:outputText value="#{mat.fecha_De_Matrícula}" />
+					<h:outputText value="#{mat.fecha_De_Matricula}" />
 				</h:column>
 				<h:column>
 					<f:facet name="header">Nuevo Ingreso</f:facet>
