--- a/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
@@ -47,7 +47,7 @@
 		 <h:dataTable styleClass="card" value="#{encuestaBB.encuesta}" var="encues">
              <h:column>
                  <f:facet name="header">Fecha de envío</f:facet>
-                 <h:outputText value="#{encues.fecha_De_Envío}"/>
+                 <h:outputText value="#{encues.fecha_De_Envio}"/>
              </h:column>
              
              <h:column>
