--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -51,7 +51,7 @@
 	        <td>Nombre: </td>
 	 		<td><h:inputText  value="#{AlumnoBB.al.Nombre}"></h:inputText></td>
 	 	</tr>
-	 		<p:commandButton value="Añadir" actionListener="#{AlumnoBB.añadirAlumno()}"/>
+	 		<p:commandButton value="Añadir" actionListener="#{alumnoBB.aniadirAlumno}"/>
 	 	<tr>
 	       
 	 	</tr>
@@ -91,7 +91,7 @@
 				<p:outputLabel value="#{a.Email_Personal}" />
 			</p:column>
 
-			<p:column headerText="Móvil" filterBy="#{a.Móvil}"
+			<p:column headerText="Móvil" filterBy="#{a.Movil}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{a.Movil}" />
 			</p:column>
