--- a/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarAsignatura.xhtml
@@ -16,22 +16,13 @@
 	<div class="cerrar"> <h:button value="Cerrar sesion" outcome="index.xhtml" /> </div>
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 
-	<h1 class="titulo"> FLM-SECRETARIA </h1>
+	<h1 class="titulo"> IMPORTAR ASIGNATURA </h1>
 
-	
-	
-	<div class="centro">
-	
-	<div class="card">
-    <h:form>
-      		  <p:fileUpload listener="#{fileUploadView.handleFileUpload}" mode="advanced" dragDropSupport="true" update="messages" sizeLimit="100000" allowTypes="/(\.|\/)(csv|xls)$/"/>
-
-       		 <p:growl id="messages" showDetail="true"/>
-    		</h:form>
-		</div>
-	
-		<input type="submit" name="leerEncuesta" value="Cancelar"/>
-		<input type="submit" name="leerEncuesta" value="Aceptar"/>
+	<div class="centrado">
+	    <h:form>
+			<p:fileUpload listener="#{fileUploadView.handleFileUpload}" mode="advanced" dragDropSupport="true" update="messages" allowTypes="/(\.|\/)(csv|xls|xlsx)$/"/>
+			<p:growl id="messages" showDetail="true"/>
+		</h:form>
 	</div>
 
 	<div class="pie"> 
