--- a/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	 xmlns:p="http://primefaces.org/ui">
+<html 	xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+		xmlns:h="http://xmlns.jcp.org/jsf/html"
+		xmlns:f="http://xmlns.jcp.org/jsf/core"
+		xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>Importar Matricula</title>
@@ -20,16 +20,10 @@
 	<h1 class="titulo"> IMPORTAR MATRICULA </h1>
 
 	<div class="centrado">	
-	<div class="card">
-    <h:form>
-      		  <p:fileUpload listener="#{fileUploadView.handleFileUpload}" mode="advanced" dragDropSupport="true" update="messages" allowTypes="/(\.|\/)(csv|xls|xlsx)$/"/>
-
-       		 <p:growl id="messages" showDetail="true"/>
-    </h:form>
-	</div>
-	
-		<h:commandButton value="Cancelar" outcome="LeerMaricula.xhtml" />
-		<h:commandButton value="Aceptar" outcome="#{matriculaBB.importarMatricula}" />
+	    <h:form enctype="multipart/form-data">
+			<p:fileUpload value="#{fileUploadView.file}" mode="advanced" fileUploadListener="#{fileUploadView.upload}"> </p:fileUpload>
+			<p:growl id="messages" showDetail="true"/>
+		</h:form>
 	</div>
 
 	<div class="pie"> 
