Importar mejora error

--- a/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
@@ -32,13 +32,9 @@
 		<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 	</div>
 	
-	
-	
-
-
 	<div class="centro">
-	 	<div class="isquierdaCentro">
-			<b>Titulacines: </b> <br></br>
+	 	<div class="izquierdaCentro">
+			<b>Titulaciones: </b> <br></br>
 		</div>
 		
         <h:form id="expediente">
