--- a/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarMatricula.xhtml
@@ -21,8 +21,9 @@
 
 	<div class="centrado">	
 	    <h:form enctype="multipart/form-data">
-			<p:fileUpload value="#{fileUploadView.file}" mode="advanced" fileUploadListener="#{fileUploadView.upload}"> </p:fileUpload>
-			<p:growl id="messages" showDetail="true"/>
+			<p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
+            <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
+            <p:growl id="messages" showDetail="true"/>
 		</h:form>
 	</div>
 
